deployments/applications/backend/services/clicks/overlays/localkube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clicks
  namespace: python-visitors-backend-localkube
spec:
  hosts:
    - ""
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: clicks
            port:
              number: 8080
